Atualizado para integração API UC10 - Encontro remoto 2

--- a/atividades/gamemania/src/app/login/login.component.html
+++ b/atividades/gamemania/src/app/login/login.component.html
@@ -5,7 +5,7 @@
        <label for="email">E-mail</label>
        <input type="email" name="email" id="email" placeholder="Digite seu email" autocomplete="off" [(ngModel)]="dadosUser.email" >
        <label for="password">Senha</label>
-       <input type="password" name="password" id="password" placeholder="Digite a senha" [(ngModel)]="dadosUser.senha">
+       <input type="password" name="password" id="password" placeholder="Digite a senha" [(ngModel)]="dadosUser.password">
        <a href="#" id="forgot-pass">Esqueceu a senha?</a>
        <input type="submit" value="Login">
        <input routerLink="/" id="btn-voltar" value="Voltar">
