--- a/atividades/gamemania/src/app/home/home.component.html
+++ b/atividades/gamemania/src/app/home/home.component.html
@@ -13,6 +13,10 @@
         <div id="menu-icones">
           <a routerLink="/login" routerLinkActive="active"><i><fa-icon [icon]="iconlogin"></fa-icon> </i> </a>
         </div>
+        <div id="nome-usuario">
+          <p>{{usuario}}</p>
+        </div>
+    
       </div>
       <div class="container">
          <nav id="menu" class="menu">
