--- a/atividades/gamemania/src/app/login/login.component.html
+++ b/atividades/gamemania/src/app/login/login.component.html
@@ -23,7 +23,7 @@
     </div>
     <div id="register-container">
       <p>Ainda não tem uma conta?</p>
-      <a href="#">Registrar</a>  
+      <a href="/usuario">Registrar</a>  
     </div>
   </div>
 </body>
